deploy/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: cr.selcloud.ru/registry/api-gateway:v0.0.2
          ports:
            - containerPort: 5001
      imagePullSecrets:
        - name: crselcloud
